Fixed categories buttons gap

--- a/src/pages/CategoriesPage/CategoriesPage.module.scss
+++ b/src/pages/CategoriesPage/CategoriesPage.module.scss
@@ -19,5 +19,5 @@
 
 .listElement {
   justify-content: flex-start;
-  gap: 16px;
+  gap: 8px;
 }
